Start angular feed

--- a/app/assets/templates/index.html
+++ b/app/assets/templates/index.html
@@ -1,2 +1,4 @@
-<h1>HI</h1>
-{{index.activities}}
+<div ng-controller="IndexCtrl as index">
+  
+  <button ng-click="index.test()">here</button>
+</div>
