Rating activity added to news feed

--- a/app/assets/templates/feed-item.html
+++ b/app/assets/templates/feed-item.html
@@ -4,3 +4,4 @@
 
 <a ui-sref="user.list({listID: listId, userID: userId })">{{listName}}</a>
 <a ui-sref="drama({dramaID: dramaId })">{{dramaName}}</a>
+{{rating}}
