--- a/app/assets/templates/feed-item.html
+++ b/app/assets/templates/feed-item.html
@@ -1,7 +1,6 @@
 <a ui-sref="user.lists({userID: userId })"> {{userName}}</a>
-
 {{message}}
-
-<a ui-sref="user.list({listID: listId, userID: userId })">{{listName}}</a>
 <a ui-sref="drama({dramaID: dramaId })">{{dramaName}}</a>
+{{preposition}}
+<a ui-sref="user.list({listID: listId, userID: userId })">{{listName}}</a>
 {{rating}}
