Refactor Favorites List

--- a/app/assets/stylesheets/user.scss
+++ b/app/assets/stylesheets/user.scss
@@ -31,3 +31,13 @@ button.alter-relationship {
   display: inline
 }
 
+#fav_list{
+  background-color:#fff2e5;
+  border: 1px solid #ffe5cc;
+  padding: 20px; 
+}
+
+.fav_drama{
+  background-color:#fff2e5;
+}
+
