--- a/app/views/dramas/all.html.erb
+++ b/app/views/dramas/all.html.erb
@@ -32,7 +32,7 @@
       :action => 'delete', :id => drama.id }, :method => :delete, form: {target: '_blank'} %></td>
         <td><%= image_tag drama.poster.url(:medium), class: 'drama' %></td>
         <td><%= drama.name %> / <%= drama.non_english_name %></td>
-        <td><%= drama.language %></td>
+        <td><%= drama.country %></td>
         <td class="cast-column row">
           <% drama.casts.each do |cast| %>
             <%= image_tag cast.picture.url(:thumb), class: 'cast s4' %>
