--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
           <div class="md-toolbar-tools">
             <h2>
               <md-button aria-label="Home" ng-if="true" ui-sref='home'>
-                <a ui-sref-active="active">Second Lead</a>
+                <a ui-sref-active="active">DramaStash</a>
               </md-button>
             </h2>
             <md-button aria-label="Browse" ng-if="true" ui-sref='dramas'>
