--- a/app/assets/templates/index.html
+++ b/app/assets/templates/index.html
@@ -1,5 +1,20 @@
 <div ng-controller="IndexCtrl as index">
-  <ul ng-repeat="activity in index.activities">
-  	<li feed-item activity="activity"></li>
-  </ul>
+  <div ng-if="!index.user">
+  	<h1>No one is logged in</h1>
+  	<h2>Quick description of DramaStash</h2>
+  	<h3>Form to sign up</h3>
+  </div>
+
+  <div ng-if="index.user">
+  	<div class="feed" ng-if="index.activities.length > 0">
+  	  <h3>Feed</h3>
+      <ul ng-repeat="activity in index.activities">
+	    <li feed-item activity="activity"></li>
+	  </ul>
+	</div>
+  	<div>
+  	  <h1>Featured Collections</h1>
+  	</div>
+  </div>
+
 </div>
