Update first page

--- a/app/assets/templates/index.html
+++ b/app/assets/templates/index.html
@@ -1,7 +1,6 @@
 <div ng-controller="IndexCtrl as index">
   <div ng-if="!index.user">
-  	<h1>No one is logged in</h1>
-  	<h2>Quick description of DramaStash</h2>
+  	<h2>[Brief description]</h2>
   	<h3>Form to sign up</h3>
   </div>
 
