--- a/app/assets/templates/dramas-index.html
+++ b/app/assets/templates/dramas-index.html
@@ -1,11 +1,11 @@
 <div ng-controller= "DramasCtrl as dramas">
-  
+
   <div class="search-filter">
     <dramas-filter items="dramas.items"> </dramas-filter>
   </div>
 
   <div class="clearfix">
-    <dir-pagination-controls boundary-links="true" template-url="/dirPagination.html"> </dir-pagination-controls>
+    <dir-pagination-controls boundary-links="true" template-url="pagination.html"> </dir-pagination-controls>
   </div>
   <div gridster= "dramas.gridsterOpts">
     <div gridster-item="items" dir-paginate= "drama in dramas.items | itemsPerPage: dramas.pageSize" current-page="dramas.currentPage" ng-cloak>
@@ -32,6 +32,6 @@
     </div>
   </div>
   <div class="clearfix">
-    <dir-pagination-controls boundary-links="true" template-url="/dirPagination.html"> </dir-pagination-controls>
+    <dir-pagination-controls boundary-links="true" template-url="pagination.html"> </dir-pagination-controls>
   </div>
 </div>
