--- a/app/assets/templates/index.html
+++ b/app/assets/templates/index.html
@@ -1,10 +1,52 @@
+
 <div ng-controller="IndexCtrl as index">
-  <div ng-if="!index.user">
-  	<h2>[Brief description]</h2>
-  	<h3>Form to sign up</h3>
+  <div class="home-loggedout" ng-if="!index.user">
+  	<h2>Search, Stash, and Share Asian TV dramas.</h2>
+    <div class="index-signup" ng-controller="RegisterCtrl as register" >
+      <h3>Sign Up</h3>
+      <div ng-if="register.error" role="alert"> {{register.error}}</div>
+      <form name="registerForm" ng-submit= "register.onSubmit()" role="form" novalidate>
+        <div class="form-group" ng-class="{ 'has-error' : registerForm.firstName.$invalid && !registerForm.firstName.$pristine }">
+          <label for="firstName">First Name</label>
+          <input type="text" name="firstName" class="form-control" ng-model="register.newUser.firstName" required />
+          <p ng-show="registerForm.firstName.$invalid && !registerForm.firstName.$pristine" class="help-block">Your first name is required.</p>
+        </div>
+
+        <div class="form-group" ng-class="{ 'has-error' : registerForm.lastName.$invalid && !registerForm.lastName.$pristine }">
+          <label for="lastName">Last Name</label>
+          <input type="text" name="lastName" class="form-control" ng-model="register.newUser.lastName" required />
+          <p ng-show="registerForm.lastName.$invalid && !registerForm.lastName.$pristine" class="help-block">Your last name is required.</p>
+        </div>
+
+        <div ng-class="{ 'has-error' : registerForm.email.$invalid && !registerForm.email.$pristine }">
+          <label for="email">Email</label>
+          <input type="text" name="email" class="form-control" ng-model="register.newUser.email" required />
+          <p ng-show="registerForm.email.$invalid && !registerForm.email.$pristine" class="help-block">Enter a valid email.</p>
+        </div>
+
+        <div class="form-group" ng-class="{ 'has-error' : registerForm.username.$invalid && !registerForm.username.$pristine }">
+          <label for="username">Username</label>
+          <input type="text" name="username" class="form-control" ng-model="register.newUser.username" ng-minlength="3" ng-maxlength="20" required />
+          <p ng-show="registerForm.username.$error.minlength" class="help-block">Username is too short.</p>
+          <p ng-show="registerForm.username.$error.maxlength" class="help-block">Username is too long.</p>
+        </div>
+
+        <div class="form-group" ng-class="{ 'has-error' : registerForm.password.$invalid && !registerForm.password.$pristine }">
+          <label for="password">Password</label>
+          <input type="password" name="password" class="form-control" ng-model="register.newUser.password" ng-minlength="6" ng-maxlength="20" required />
+          <p ng-show="registerForm.password.$error.minlength" class="help-block">Password is too short.</p>
+          <p ng-show="registerForm.password.$error.maxlength" class="help-block">Password is too long.</p>
+        </div>
+
+        <div>
+          <button type="submit" ng-disabled="registerForm.$invalid" class="btn btn-primary">Register</button>
+          <a href="#/login" class="btn btn-link">Cancel</a>
+        </div>
+      </form>
+    </div>
   </div>
 
-  <div ng-if="index.user">
+  <div class="home-loggedin" ng-if="index.user">
   	<div class="feed" ng-if="index.activities.length > 0">
   	  <h3>Feed</h3>
       <ul ng-repeat="activity in index.activities">
