--- a/app/assets/templates/index.html
+++ b/app/assets/templates/index.html
@@ -1,7 +1,7 @@
 
 <div ng-controller="IndexCtrl as index">
   <div class="home-loggedout" ng-if="!index.user">
-  	<h2>Search, Stash, and Share Asian TV dramas.</h2>
+  	<h2>Discover, Stash, and Share Asian TV dramas.</h2>
     <div class="index-signup" ng-controller="RegisterCtrl as register" >
       <h3>Sign Up</h3>
       <div ng-if="register.error" role="alert"> {{register.error}}</div>
