Disqus on DramaShow page

--- a/app/assets/templates/dramas-index.html
+++ b/app/assets/templates/dramas-index.html
@@ -1,6 +1,6 @@
 <div>
   <div class="search-filter">
-    <dramas-filter items="dramas.items"> </dramas-filter>
+    <dramas-filter items="dramas.items" total-dramas="dramas.totalDramas"> </dramas-filter>
   </div>
 
   <div class="clearfix">
