--- a/app/assets/templates/drama-show.html
+++ b/app/assets/templates/drama-show.html
@@ -45,6 +45,7 @@
       <div ng-cloak>
         <md-content>
           <md-tabs md-dynamic-height md-border-bottom>
+
             <md-tab label="Reviews">
               <md-content class="md-padding">
                 <div ng-if="drama.user">
@@ -56,7 +57,7 @@
                     <md-content>
                       <md-list>
                         <md-list-item class="md-3-line">
-                          <img src="https://lh5.googleusercontent.com/-Qhu7Srm0lp8/AAAAAAAAAAI/AAAAAAAAReo/s-uOtXpAmHE/photo.jpg" class="md-avatar" alt="yolo" />
+                          <img src="https://lh5.googleusercontent.com/-Qhu7Srm0lp8/AAAAAAAAAAI/AAAAAAAAReo/s-uOtXpAmHE/photo.jpg" class="md-avatar" alt="avatar" />
                           <div class="md-list-item-text">
                             <h3>
                               <span name-user user-id="review.reviewer_id"></span>
@@ -75,18 +76,18 @@
                 </div>
               </md-content>
             </md-tab>
+
             <md-tab label="Comments">
               <md-content class="md-padding">
                 <div class="comments">
-                  <dir-disqus disqus-shortname="secondlead"
-                       disqus-identifier="{{ drama.id }}"
-                       disqus-url="{{ drama.link }}">
-                  </dir-disqus>
+                  <dir-disqus disqus-shortname="{{drama.disqusConfig.disqus_shortname}}" disqus-identifier="{{drama.disqusConfig.disqus_identifier}}" disqus-url="{{drama.disqusConfig.disqus_url}}" readytobind="true"></dir-disqus>
                 </div>
               </md-content>
             </md-tab>
+
           </md-tabs>
         </md-content>
+
       </div>
     </div>
     <div class="drama-cast col m12 l4 row">
