Disqus on Cast and Drama Show page

--- a/app/assets/templates/drama-show.html
+++ b/app/assets/templates/drama-show.html
@@ -80,9 +80,9 @@
             <md-tab label="Comments">
               <md-content class="md-padding">
                 <div class="comments">
-                  <dir-disqus disqus-shortname="{{drama.disqusConfig.disqus_shortname}}"
-                              disqus-identifier="{{drama.disqusConfig.disqus_identifier}}"
-                              disqus-url="{{drama.disqusConfig.disqus_url}}"
+                  <dir-disqus disqus-shortname="dramastash"
+                              disqus-identifier="{{drama.id}}"
+                              disqus-url="{{drama.link}}"
                               disqus-title="{{drama.name}}"
                               readytobind="true"></dir-disqus>
                 </div>
