--- a/app/assets/templates/cast-show.html
+++ b/app/assets/templates/cast-show.html
@@ -60,4 +60,13 @@
       </md-content>
     </div>
   </div>
+  <md-content class="md-padding">
+    <div class="comments">
+      <dir-disqus disqus-shortname="dramastash"
+      disqus-identifier="{{cast.id}}"
+      disqus-url="{{cast.link}}"
+      disqus-title="{{cast.name}}"
+      readytobind="true"></dir-disqus>
+    </div>
+  </md-content>
 </section>
