Fix rendering of disqus identifier and url

--- a/app/assets/templates/cast-show.html
+++ b/app/assets/templates/cast-show.html
@@ -62,9 +62,9 @@
   <md-content class="md-padding">
     <div class="comments">
       <dir-disqus disqus-shortname="dramastash"
-      disqus-identifier="cast.id"
-      disqus-url="cast.link"
-      disqus-title="cast.name"
+      disqus-identifier="{{ cast.id }}"
+      disqus-url="{{ cast.link }}"
+      disqus-title="{{ cast.name }}"
       readytobind="true"></dir-disqus>
     </div>
   </md-content>
