--- a/app/assets/templates/drama-show.html
+++ b/app/assets/templates/drama-show.html
@@ -81,9 +81,9 @@
               <md-content class="md-padding">
                 <div class="comments">
                   <dir-disqus disqus-shortname="dramastash"
-                              disqus-identifier="drama.id"
-                              disqus-url="drama.link"
-                              disqus-title="drama.name"
+                              disqus-identifier="{{ drama.dramaId }}"
+                              disqus-url="{{ drama.link }}"
+                              disqus-title="{{ drama.name }}"
                               readytobind="true"></dir-disqus>
                 </div>
               </md-content>
