--- a/app/assets/templates/filter-bar.html
+++ b/app/assets/templates/filter-bar.html
@@ -1,6 +1,6 @@
 <form action="#">
   <label>Genres</label>
-  <div id="genre-filter"     
+  <div id="genre-filter"
     isteven-multi-select
     input-model="genreItems"
     output-model="selectedGenres"
@@ -8,10 +8,10 @@
     item-label="name"
     tick-property="ticked"
     helper-elements="none"
-    output-properties="value">
+    output-properties="name">
   </div>
   <label>Country</label>
-   <div id="country-filter"    
+   <div id="country-filter"
     isteven-multi-select
     input-model="countryItem"
     output-model="selectedCountry"
