--- a/app/assets/templates/pagination.html
+++ b/app/assets/templates/pagination.html
@@ -2,7 +2,8 @@
 <div class="range-label">&nbsp;&nbsp;Displaying {{ range.lower }} - {{ range.upper }} of {{ range.total }}</div>
 <a href="" title="Next page"  ng-class="{ disabled : pagination.current == pagination.last }" ng-click="setCurrent(pagination.current + 1)">&nbsp;&nbsp;&rsaquo;</a>
 
-
-    <!-- <li ng-repeat="pageNumber in pages track by tracker(pageNumber, $index)" ng-class="{ active : pagination.current == pageNumber, disabled : pageNumber == '...' }">
-        <a href="" ng-click="setCurrent(pageNumber)">{{ pageNumber }}</a>
-    </li> -->
+<!-- <ul>
+  <li ng-repeat="pageNumber in pages track by tracker(pageNumber, $index)" ng-class="{ active : pagination.current == pageNumber, disabled : pageNumber == '...' }">
+    <a href="" ng-click="setCurrent(pageNumber)">{{ pageNumber }}</a>
+  </li>
+</ul> -->
