Refactor filter url query strings

--- a/app/assets/templates/dramas-index.html
+++ b/app/assets/templates/dramas-index.html
@@ -1,10 +1,6 @@
 <div>
   <div class="search-filter">
-    <dramas-filter  items="dramas.items"
-                    total-dramas="dramas.totalDramas"
-                    selected-genres="dramas.selectedGenres"
-                    selected-country="dramas.selectedCountry">
-    </dramas-filter>
+    <dramas-filter  items="dramas.items" total-dramas="dramas.totalDramas"></dramas-filter>
   </div>
 
   <div class="clearfix">
