--- a/app/assets/templates/lists-index.html
+++ b/app/assets/templates/lists-index.html
@@ -1,6 +1,6 @@
 <div>
-  <h2>Favorites</h2>
-  
+  <h2>Favorites Bar</h2>
+
   <div id="fav_list" gridster= "lists.gridsterFavListOpts">
     <div gridster-item="drama" ng-repeat= "drama in lists.fav_dramas" ng-cloak>
       <md-content class="fav_drama" layout="row" layout-wrap layout-align="center start" layout-xs="column">
