--- a/app/assets/stylesheets/03-home/index.scss
+++ b/app/assets/stylesheets/03-home/index.scss
@@ -4,8 +4,8 @@
   height: 100vh;
   width: 100%;
   margin: 0px;
-  border: 6px solid $ds-light-orange;
   background-color: $ds-light-orange;
+  background-image: linear-gradient($ds-orange, $ds-light-orange);
   display: -webkit-flex;
   display: flex;
   -webkit-flex-direction: column;
@@ -16,7 +16,6 @@
   h2{
     padding: 100px 50px;
     max-width: 300px;
-
   }
 
   .index-signup{
