--- a/app/assets/stylesheets/03-home/index.scss
+++ b/app/assets/stylesheets/03-home/index.scss
@@ -5,7 +5,7 @@
   width: 100%;
   margin: 0px;
   background-color: $ds-light-orange;
-  background-image: linear-gradient($ds-orange, $ds-light-orange);
+  background-image: linear-gradient($ds-orange, $ds-off-white);
   display: -webkit-flex;
   display: flex;
   -webkit-flex-direction: column;
@@ -13,14 +13,28 @@
   -webkit-align-content: space-around;
   align-content: space-around;
 
-  h2{
+  h1{
+    -webkit-flex: 1;
+    flex: 1;
+    font-family: 'Roboto Slab', sans-serif;
+    color: $ds-light-grey;
     padding: 100px 50px;
-    max-width: 300px;
+    max-width: 400px;
   }
 
   .index-signup{
-    padding: 50px 500px;
+    -webkit-flex: 1;
+    flex: 1;
+    border-radius: 25px;
+    padding-bottom: 150px;
     -webkit-align-self: flex-end;
     align-self: flex-end;
+    color: $ds-off-white;
+    border: 1px solid $ds-off-white;
+    width: 500px;
+    font-family: 'Roboto Condensed', sans-serif;
+    margin-right: 50px;
+    margin-bottom: 250px;
+
   }
 }
