--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -5,17 +5,17 @@
 /* Colors and Variables */
 @import "colors";
 @import "bootstrapvariables";
+// @import "foundationsettings";
 
 /*    Third party stylesheets      */
-@import "bootstrap-sass/assets/stylesheets/bootstrap";
+// @import "bootstrap-sass/assets/stylesheets/bootstrap";
 @import "foundation-sites/scss/foundation";
-@import "foundation-sites/scss/settings/settings";
 
 /*    Custom stylesheets      */
 @import "00-layout/nav";
-@import "01-elements/scaffolds";
-@import "01-elements/xeditable";
+// @import "01-elements/scaffolds";
+// @import "01-elements/xeditable";
 @import "03-home/index";
-@import "04-search-and-filter/filter-bar";
-@import "05-dramas/dramas";
-@import "07-users/user";
+// @import "04-search-and-filter/filter-bar";
+// @import "05-dramas/dramas";
+// @import "07-users/user";
