--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -5,7 +5,7 @@
 /* Colors and Variables */
 @import "colors";
 @import "bootstrapvariables";
-// @import "foundationsettings";
+@import "foundationsettings";
 
 /*    Third party stylesheets      */
 // @import "bootstrap-sass/assets/stylesheets/bootstrap";
@@ -16,6 +16,6 @@
 // @import "01-elements/scaffolds";
 // @import "01-elements/xeditable";
 @import "03-home/index";
-// @import "04-search-and-filter/filter-bar";
+@import "04-search-and-filter/filter-bar";
 // @import "05-dramas/dramas";
 // @import "07-users/user";
